--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Sé escribir un "hola mundo"</title>
 </head>
 <body>
-    <article>
-        Hello world aaa
-    </article>
+    <p>
+        LOGH es el mejor anime que existe
+    </p>
 </body>
 </html>
